Bug 104134 - dox-files are not saved before building API docs
Summary: dox-files are not saved before building API docs
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Doxygen integration (other bugs)
Version First Reported In: 3.2.0
Platform: unspecified Linux
: LO normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-18 13:12 UTC by Daniel Franke
Modified: 2007-01-13 16:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Franke 2005-04-18 13:12:38 UTC
Version:           3.2.0 (using KDE 3.4.0, compiled sources)
Compiler:          gcc version 3.3 20030226 (prerelease) (SuSE Linux)
OS:                Linux (i686) release 2.4.20-4GB

Generic C++-Application (custom Makefiles)

Let "mainpage.dox" be part of the project. Open and edit (without saving) mainpage.dox, then Build -> Build API Documentation. 

Contrary to source files before building an executable, the mainpage.dox is NOT saved before building the documentation.
Comment 1 Amilcar do Carmo Lucas 2005-04-18 13:15:49 UTC
Yeap, you are correct.
Comment 2 Jens Dagerbo 2007-01-13 16:23:39 UTC
SVN commit 622958 by dagerbo:

Save files before running Doxygen build

BUG: 104134

 M  +2 -0      doxygenpart.cpp  


--- branches/kdevelop/3.4/parts/doxygen/doxygenpart.cpp #622957:622958
@@ -216,6 +216,8 @@
 
 void DoxygenPart::slotDoxygen()
 {
+    if ( !partController()->saveAllFiles() ) return;
+
     bool searchDatabase = false;
     QString outputDirectory;
     QString htmlDirectory;