Save files before running Doxygen build

BUG: 104134